deployment/gateway/loadbalancer_service.yaml
# Source: nginx-gateway-fabric/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-svc
  namespace: nginx-gateway
  labels:
    app.kubernetes.io/name: nginx-gateway-svc
    app.kubernetes.io/instance: nginx-gateway-svc
    app.kubernetes.io/version: "1.0.0"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/instance: nginx-gateway
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
